Authentication API documentaion in swagger
