# app/Http/Controllers/RegisterController.php
@@ -17,6 +17,58 @@ class RegisterController extends Controller
         $this->auth = $auth;
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/register",
+     *     tags={"Authentication"},
+     *     summary="Register to system.",
+     *     description="Register",
+     *     operationId="register",
+     *     @OA\RequestBody(
+     *         description="Pet object that needs to be added to the store",
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="name",
+     *                     description="User name",
+     *                     type="string",
+     *                     example="Hossein Abd"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="email",
+     *                     description="User email",
+     *                     type="string",
+     *                     example="hossein@example.test"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     description="User password",
+     *                     type="string",
+     *                     example="12345678"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password_confirmation",
+     *                     description="User confirm password",
+     *                     type="string",
+     *                     example="12345678"
+     *                 ),
+     *                  required = {"name", "email", "password", "password_confirmation"}
+     *             )
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input"
+     *     )
+     * )
+     */
     public function register(RegisterRequest $request): JsonResponse
     {
         try {
